--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,41 @@
-services:
-  backend:
-    build: ./backend
-    ports:
-      - "3001:3001"
-    environment:
-      - PORT=3001
-      - GEMINI_API_KEY=${GEMINI_API_KEY}
-      - DATABASE_URL=file:/app/prisma/dev.db
-    volumes:
-      - ./backend/src:/app/src
-      # Persist the database file
-      - ./backend/prisma:/app/prisma
-      # Persist migrations if any
-      # - ./backend/prisma/migrations:/app/prisma/migrations
+version: "3.8"
 
+services:
   frontend:
-    build: ./frontend
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
     ports:
-      - "80:80"
+      - "3000:3000"
+    volumes:
+      - ./frontend:/app
+      - /app/node_modules
+    environment:
+      - VITE_API_URL=http://localhost:8000
     depends_on:
       - backend
+
+  backend:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    ports:
+      - "8000:8000"
+    volumes:
+      - ./backend:/app
+    environment:
+      - DATABASE_URL=postgresql://user:password@db:5432/dbname
+
+  db:
+    image: postgres:15
+    environment:
+      - POSTGRES_USER=user
+      - POSTGRES_PASSWORD=password
+      - POSTGRES_DB=dbname
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+
+volumes:
+  postgres_data:
