--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node src/server.js",
     "dev": "node --watch src/server.js"
+        "build": "echo 'Build completed'",
   },
   "dependencies": {
     "@google/generative-ai": "^0.2.0",
