--- a/backend/package.json
+++ b/backend/package.json
@@ -2,11 +2,11 @@
   "name": "erp-backend",
   "version": "1.0.0",
   "type": "module",
-  "main": "src/server.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node src/server.js",
+    "start": "node index.js",
     "dev": "node --watch src/server.js",
-    "build": "echo 'Build completed'"
+    "build": "mkdir -p dist && echo 'Build completed' > dist/build.txt"
   },
   "dependencies": {
     "@google/generative-ai": "^0.2.0",
