--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "dev": "node --watch src/server.js",
-    "build": "node -e \"const fs=require('fs'); if(!fs.existsSync('dist')) fs.mkdirSync('dist');\""
+"build": "mkdir -p dist && echo 'Build complete'"
   },
   "dependencies": {
     "@google/generative-ai": "^0.2.0",
