--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ services:
   backend:
     build: ./backend
     ports:
-      - "80:3001"
+      - "3001:3001"
     environment:
       - PORT=3001
       - GEMINI_API_KEY=${GEMINI_API_KEY}
@@ -16,4 +16,14 @@ services:
       - DATABASE_URL=file:/app/prisma/dev.db
     volumes:
       - ./backend/src:/app/src
+      # Persist the database file
       - ./backend/prisma:/app/prisma
+      # Persist migrations if any
+      # - ./backend/prisma/migrations:/app/prisma/migrations
+
+  frontend:
+    build: ./frontend
+    ports:
+      - "80:80"
+    depends_on:
+      - backend
